Fix: Revised comment and quotation checks